refactor: update how to match and replace the JVM options